kubernetes/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
  labels:
    app: ghost-blog
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-blog
  template:
    metadata:
      labels:
        app: ghost-blog
    spec:
      containers:
      - name: ghost-blog
        image: ghost:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: 512m
            memory: 256Mi
        startupProbe:
          tcpSocket:
            port: 2368
          periodSeconds: 10
          failureThreshold: 30
        livenessProbe:
          tcpSocket:
            port: 2368
          initialDelaySeconds: 30
          periodSeconds: 90
          timeoutSeconds: 60
        readinessProbe:
          tcpSocket:
            port: 2368
          initialDelaySeconds: 30
          periodSeconds: 60
        livenessProbe:
          httpGet:
            path: /
            port: 2368
          initialDelaySeconds: 3
          periodSeconds: 3
