kubernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
  namespace: test
spec:
  type: NodePort
  selector:
    app: ghost-blog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
